omni/tests/goldens/types/unknown_type_20.err
tests/goldens/types/unknown_type_20.omni:1:13: error: unknown type "Mystery20"
     1 | let value20:Mystery20 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_20.omni:1:1: error: type mismatch: cannot assign int to Mystery20
     1 | let value20:Mystery20 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery20 or change the variable type to int
