omni/tests/goldens/types/unknown_type_20.omni
let value20:Mystery20 = 1
